Fix scrollbar for comments.

--- a/app/assets/stylesheets/shared-style.css.scss
+++ b/app/assets/stylesheets/shared-style.css.scss
@@ -3852,7 +3852,7 @@ a.uploadNewConceptBoard {
   background: #e1e1e1;
 }
 
-.dcProduct .dcProductRight textarea.dcProductDesc {
+.dcProduct .dcProductRight div.dcProductDesc {
   width: 100%;
   resize: none;
   border: 1px solid #e1e1e1;
